# DjangoDiveBookmarks

./: LICENSE  pyproject.toml
.github/workflows/: codeql-analysis.yml  django.yml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: base.html
account/templates/account/: dashboard.html  edit.html  login.html  register.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bookmarks/: settings.py  urls.py
