[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Naveen Kumar Reddy Pemmana <mr.naveen8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
