[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Naveen Kumar Reddy Pemmana <mr.naveen8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
